--- a/dreamtheater/albumsdreamtheater.css
+++ b/dreamtheater/albumsdreamtheater.css
@@ -201,7 +201,10 @@ figure .trasera p {
 	font-size: 16px;
 	font-weight: 600;
 }
-
+.trasera::-webkit-scrollbar
+{
+ display: none;
+}
 .sci
 {
      position: absolute;
