--- a/estilo.css
+++ b/estilo.css
@@ -123,14 +123,17 @@ header ul li a:hover
 }
 .contenedor figure
 {
-	display: flex;
+	display: inline-block;
 	margin: 70px 50px;
 	position: relative;
 	height: 350px;
 	width: 350px;
 	overflow: hidden;
 	border-radius: 6px;
-	box-shadow: 0px 15px 25px rgba(0,0,0,0.50);
+}
+.contenedor figure:hover
+{
+	box-shadow: 0px 15px 25px rgb(255, 0, 0, 0.35);
 }
 .contenedor figure img
 {
@@ -144,7 +147,7 @@ header ul li a:hover
 	top: 0;
 	width: 100%;
 	height: 100%;
-	background: rgba(0, 0, 0, 0.438); 
+	background: rgba(0, 0, 0, 0.8); 
 	opacity: 0;
 	visibility: hidden;
 	text-align: center;
