--- a/ledzppelin/ledzeppelinalbums.css
+++ b/ledzppelin/ledzeppelinalbums.css
@@ -200,7 +200,6 @@ figure .trasera p {
 	font-size: 16px;
 	font-weight: 600;
 }
-
 .sci
 {
      position: absolute;
@@ -220,7 +219,7 @@ figure .trasera p {
      margin-right: 15px;
      width: 50px;
      height: 50px;
-     color: red;;
+     color: red;
      background: black;
      border-radius: 50%;
      display: flex;
