--- a/megadeth/albumsmegadeth.css
+++ b/megadeth/albumsmegadeth.css
@@ -231,7 +231,7 @@ figure .trasera p {
      align-items: center;
      transition: 0.2s ease-in-out;
      text-decoration: none;
-     box-shadow: 0px 10px 7px 0px;
+     box-shadow: 0px 10px 7px 0px red;
      font-size: 30px;
 }
 /*.sci li a img
