--- a/adaytoremember/adaytoremember.css
+++ b/adaytoremember/adaytoremember.css
@@ -1,3 +1,14 @@
+:root
+{
+	--primary-color: red;
+	--second-color: black;
+	--three-color: white;
+	--four-color: gray;
+}
+html
+{
+	font-size: 62.5%;
+}
 *
 {
 	margin: 0;
@@ -12,6 +23,7 @@ body
 {
 	background: url('../img/adaytoremember/adaytoremember1.jpg');
 	width: auto;
+	background-size: cover;
 	background-position: 50% 20%;
 }
 body p
@@ -29,20 +41,20 @@ header
 	position: fixed;
 	top: 0;
 	left: 0;
-	width: 107%;
+	width: 101%;
 	padding: 20px 100px;
 	display: flex;
 	justify-content: space-between;
 	align-items: center;
 	z-index: 1000;
-	background: black;
+	background: var(--second-color);
 }
 header .logo
 {
 	position: relative;
-	color: red;
+	color: var(--primary-color);
 	display: inline-block;
-	font-size: 1.5em;
+	font-size: 2.7rem;
 	text-decoration: none;
 	font-weight: 800;
 }
@@ -62,9 +74,9 @@ header ul li
 header ul li a
 {
 	display: inline-block;
-	color: red;
+	color: var(--primary-color);
 	font-weight: 600;
-	font-size: 1.1em;
+	font-size: 1.6rem;
 	margin-left: 10px;
 	display: inline-block;
 	padding: 8px 10px;
@@ -74,8 +86,8 @@ header ul li a
 header ul li a.active,
 header ul li a:hover
 {
-	background: red;
-	color:#ffff;
+	background: var(--primary-color);
+	color: var(--three-color);
 	border-radius: 30px;
 }
 .content
@@ -90,22 +102,22 @@ header ul li a:hover
 .content .textBox h2
 {
 	user-select: none;
-	color: red;
-	font-size: 3.5em;
+	color: var(--primary-color);
+	font-size: 4.5rem;
 	margin-bottom: 10px;
 	line-height: 1.2em;
-	font-weight: 700;
+	padding: 25px;
 }
 .content .textBox p
 {
-	font-size: 20px;
-	color:red;
+	font-size: 2.2rem;
+	color:var(--primary-color);
 	font-weight: bold;
 }
 .content .textBox a:hover
 {
-	background: red;
-	color: #ffff;
+	background: var(--primary-color);
+	color: var(--three-color);
 }
 .content .textBox a
 {
@@ -113,9 +125,9 @@ header ul li a:hover
 	display: inline-block;
 	margin-top: 20px;
 	padding: 15px 30px;
-	background: black;
-	color: #ffff;
-	font-size: 1.2em;
+	background: var(--second-color);
+	color: var(--three-color);
+	font-size: 2.0rem;
 	border-radius: 40px;
 	font-weight: 700;
 	letter-spacing: 1px;
@@ -135,20 +147,20 @@ header ul li a:hover
 }
 .sci li a
 {
-     position: relative;
-     display: inline-block;
-     margin-right: 15px;
-     width: 50px;
-     height: 50px;
-	color: red;
-     background: black;
-     border-radius: 50%;
-     display: flex;
-     justify-content: center;
-     align-items: center;
-     transition: 0.2s ease-in-out;
+    position: relative;
+    display: inline-block;
+    margin-right: 15px;
+    width: 50px;
+    height: 50px;
+	color: var(--primary-color);
+    background: var(--second-color);
+    border-radius: 50%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    transition: 0.2s ease-in-out;
 	text-decoration: none;
-	box-shadow: 0px 10px 7px 0px red;
+	box-shadow: 0px 10px 7px 0px var(--primary-color);
 	font-size: 30px;
 }
 /* .sci li a img
@@ -161,13 +173,13 @@ header ul li a:hover
 } */
 .sci li a:hover
 {
-     background: red;
+     background: var(--primary-color);
 	box-shadow: 0px 0px 0px 0px;
      transform: translateY(-10px);
 }
 .sci li a:hover .fa
 {
-	color: #fff;
+	color: var(--three-color);
 }
 section 
 {
@@ -195,13 +207,13 @@ footer
 	width: auto;
 	height: auto;
 	font-weight: bold;
-	background: black;
-	color: gray;
+	background: var(--second-color);
+	color: var(--four-color);
 }
 footer p
 {
 	text-align: center;
-	font-size: 20px;
+	font-size: 2.1rem;
 }
 /* colores estilo sombreado y color de fondo de la imagenes */
 
