--- a/estilo.css
+++ b/estilo.css
@@ -1,25 +1,45 @@
+:root
+{
+	--primary-color: red;
+	--second-color: black;
+	--three-color: rgb(255, 0, 0, 0.35);
+	--four-color: white;
+	--five-color: gray;
+	--six--color: rgba(0, 0, 0, 0.8);
+}
 *
 {
 	margin: 0;
 	padding: 0;
 	box-sizing: border-box;
 }
-
+html
+{
+	font-size: 62.5%;
+}
 body::-webkit-scrollbar 
 {
-    width: 7px;
+    width: 1rem;
     background: transparent;
 }
 body::-webkit-scrollbar-thumb
 {
-	background: red;
+	background: var(--primary-color);
 	border-radius: 50px;
 }
 
 body 
 {
-	background: black;
-	color: red;
+	background-position: center;
+	background: var(--second-color);
+	color: var(--primary-color);
+	font-weight: bold;
+}
+body p
+{
+	user-select: none;
+	text-align: center;
+	word-spacing: 10px;
 }
 /*body p
 {
@@ -32,27 +52,27 @@ body
 h2
 {
 	text-align: center;
-	font-size: 60px;
+	font-size: 6.5rem;
 	font-weight: bold;
-	color: red;
+	color: var(--primary-color);
 	user-select: none;
 	margin: 90px;
 }
 .contexto h1
 {
 	top: 0;
-	padding: 100px;
+	padding: 150px;
 	height: auto;
 	width: auto;
 	text-align: center;
-	font-size: 70px;
+	font-size: 9.9rem;
 	background: url('img/detodo/sod1.jpg');
 	background-size: cover; 
 	background-position: center;
 	background-attachment: fixed;
 	overflow: hidden;
 	user-select: none;
-	color :white;
+	color :var(--four-color);
 }
 
 header
@@ -60,22 +80,21 @@ header
 	position: fixed;
 	top: 0;
 	left: 0;
-	width: 107%;
+	width: 101%;
 	padding: 20px 100px;
 	display: flex;
 	justify-content: space-between;
 	align-items: center;
 	z-index: 1000;
-	background: black;
+	background: var(--second-color);
 }
 header .logo
 {
 	position: relative;
-	color: red;
+	color: var(--primary-color);
 	display: inline-block;
-	font-size: 1.5em;
+	font-size: 2.5rem;
 	text-decoration: none;
-	font-weight: 800;
 }
 header a
 {
@@ -93,9 +112,9 @@ header ul li
 header ul li a
 {
 	display: inline-block;
-	color: red;
+	color: var(--primary-color);
 	font-weight: 600;
-	font-size: 1.1em;
+	font-size: 1.6em;
 	margin-left: 10px;
 	padding: 8px 10px;
 	text-decoration: none;
@@ -104,8 +123,8 @@ header ul li a
 header ul li a.active,
 header ul li a:hover
 {
-	background: red;
-	color:#ffff;
+	background: var(--primary-color);
+	color: var(--four-color);
 	border-radius: 30px;
 }
 
@@ -133,7 +152,7 @@ header ul li a:hover
 }
 .contenedor figure:hover
 {
-	box-shadow: 0px 15px 25px rgb(255, 0, 0, 0.35);
+	box-shadow: 0px 15px 25px var(--three-color);
 }
 .contenedor figure img
 {
@@ -147,7 +166,7 @@ header ul li a:hover
 	top: 0;
 	width: 100%;
 	height: 100%;
-	background: rgba(0, 0, 0, 0.8); 
+	background: var(--six--color); 
 	opacity: 0;
 	visibility: hidden;
 	text-align: center;
@@ -168,16 +187,16 @@ header ul li a:hover
 }
 .contenedor figure .capa h3
 {
-	color: white;
+	color: var(--four-color);
 	font-weight: 800px;
 	margin-bottom: 120px;
 	transition: all 500ms ease-out;
-	font-size: 35px;
+	font-size: 3.0rem;
 }
 .contenedor figure .capa p
 {
-	color: white;
-	font-size: 35px;
+	color: var(--four-color);
+	font-size: 3.0rem;
 	line-height: 1.5;
 	width: 100%;
 	max-width: 270px;
@@ -188,10 +207,10 @@ header ul li a:hover
 	margin: 10px;
 	user-select: none;
 	text-decoration:none;
-	color: white;
+	color: var(--four-color);
 	border-radius: 50px;
 	letter-spacing: 1px;
-	font-size: 27px;
+	font-size: 3.0rem;
 	padding: 10px 5px;
 }
 .contenedor figure a:hover
@@ -199,7 +218,7 @@ header ul li a:hover
 	text-decoration: underline;
 /*	border: 1px solid ;
 	border-radius: 50px;*/
-	color: red;
+	color: var(--primary-color);
 }
 
 footer 
@@ -222,20 +241,20 @@ footer
 footer p
 {
 	font-weight: 700;
-	font-size: 35px;
+	font-size: 3.9rem;
 	text-align: center;
 	margin: 20px 20px ;
 }
 .derechos
 {
 	text-align: center;
-	background: black;
-	color: gray;
+	background: var(--second-color);
+	color: var(--five-color);
 	user-select: none;
 }
 .derechos p
 {
-	font-size: 25px;
+	font-size: 2.9rem;
 	font-weight: bold;
 }
 
