--- a/estilo2.css
+++ b/estilo2.css
@@ -1,25 +1,36 @@
+:root
+{
+	--primary-color: red;
+	--second-color: black;
+	--three-color: white;
+	--four-color: gray;
+}
 *
 {
 	margin:0;
 	padding: 0;
 	box-sizing: border-box;
 }
+html
+{
+	font-size: 62.5%;
+}
 body::-webkit-scrollbar 
 {
-    width: 7px;
+    width: 1rem;
     background: transparent;
 }
 body::-webkit-scrollbar-thumb
 {
-	background: red;
+	background: var(--primary-color);
 	border-radius: 50px;
 }
 body 
 {
-	background: black;
+	background: var(--second-color);
 	background-position: center;
 	font-weight: bold;
-	color: red;
+	color: var(--primary-color);
 }
 
 body p
@@ -28,6 +39,15 @@ body p
 	text-align: center;
 	word-spacing: 10px;
 }
+h2
+{
+	text-align: center;
+	font-size: 6.5rem;
+	font-weight: bold;
+	color: var(--primary-color);
+	user-select: none;
+	margin: 90px;
+}
 .contexto h1
 {
 	top: 0;
@@ -35,79 +55,48 @@ body p
 	height: auto;
 	width: auto;
 	text-align: center;
-	font-size: 70px;
+	font-size: 9.9rem;
 	background: url('img/detodo/sod1.jpg');
 	background-size: cover;
 	background-position: center;
 	background-attachment: fixed;
 	overflow: hidden;
 	user-select: none;
-	font-family: 'Nunito', sans-serif;
-	color: white;
+	color: var(--three-color);
 }
+
+
 	/* seccion para el cuadro de busqueada */
 
-
-.caja
+/*.caja
 {
 	border-radius: 30px;
-	margin: 30px;
-	text-align: center;
 }
-.caja_chica input#search
-{
-	padding: 10px;
-	top: 0;
-	border-radius: 20px;
-	background: black;
-	color: red;
-	border: none;
-	float: center;
-	-webkit-border-radius: 10px;
-  	-moz-border-radius: 10px;
-	
-	
-	  -webkit-transition: background .55s ease;
-	-moz-transition: background .55s ease;
-	-ms-transition: background .55s ease;
-	-o-transition: background .55s ease;
-	transition: background .55s ease;
-}
-.caja_chica input#search::-webkit-input-placeholder {
-	color: red;
- }
- .caja_chica .icon
- {
-	 top: 50%;
-	 z-index: 1;
-	 color: red;
- }
- .caja_chica input#search:hover, .caja_chica input#search:focus, .caja_chica input#search:active{
-    outline:none;
-    /* background: #ffffff; */
-  }
+*/
+
+
+	/* 		seccion para el menu*/
 
 header
 {
 	position: fixed;
 	top: 0;
 	left: 0;
-	width: 107%;
+	width: 101%;
 	padding: 20px 100px;
 	display: flex;
 	justify-content: space-between;
 	align-items: center;
 	z-index: 1000;
-	background: black;
+	background: var(--second-color);
 }
 header .logo
 {
 	position: relative;
-	color: red;
+	color: var(--primary-color);
 	display: inline-block;
-	font-size: 1.5em;
+	font-size: 2.5rem;
 	text-decoration: none;
-	font-weight: 800;
 }
 header a
 {
@@ -125,11 +114,10 @@ header ul li
 header ul li a
 {
 	display: inline-block;
-	color: red;
+	color: var(--primary-color);
 	font-weight: 600;
-	font-size: 1.1em;
+	font-size: 1.6rem;
 	margin-left: 10px;
-	display: inline-block;
 	padding: 8px 10px;
 	text-decoration: none;
 	user-select: none;
@@ -137,8 +125,8 @@ header ul li a
 header ul li a.active,
 header ul li a:hover
 {
-	background: red;
-	color:#ffff;
+	background: var(--primary-color);
+	color:var(--three-color);
 	border-radius: 30px;
 }
 
@@ -166,9 +154,9 @@ header ul li a:hover
 	-o-transform: perspective(300px) rotateY(180deg);
 	transform: perspective(300px) rotateY(180deg);
 
-	-webkit-box-shadow:0px 2px 10px 2px white;
-	-moz-box-shadow:0px 2px 10px 2px white;
-	box-shadow:0px 2px 10px 2px white;
+	-webkit-box-shadow:0px 2px 10px 2px var(--three-color);
+	-moz-box-shadow:0px 2px 10px 2px var(--three-color);
+	box-shadow:0px 2px 10px 2px var(--three-color);
 	border-radius: 13px;
 }
 
@@ -204,11 +192,11 @@ figure .trasera {
 	position: absolute;
 	top: 0;
 	padding: 0px;
-	color: white;
+	color: var(--three-color);
 	transform: perspective(300px) rotateY(180deg) ;
 	backface-visibility: hidden;
 	overflow: auto;
-	background: black;
+	background: var(--second-color);
 }
 
 
@@ -218,7 +206,7 @@ figure .trasera {
 
 figure .trasera .titulo {
 	text-align: center;
-	color:white;
+	color:var(--three-color);
 	font-weight: normal;
 	margin-bottom: 20px;
 	font-size: 30px;
@@ -230,7 +218,7 @@ figure .trasera .titulo {
 figure .trasera hr {
 	border-radius: 50px;
 	height: 1px;
-	background: white;
+	background: var(--three-color);
 	border:none;
 	margin-bottom: 20px;
 	opacity: .5s;
@@ -261,7 +249,7 @@ figure .trasera p {
   left: 0;
   width: 35px;
   height: 35px;
-  background: black;
+  background: var(--second-color);
   border-radius: 60px;
   display: flex;
   justify-content: center;
@@ -276,7 +264,7 @@ figure .trasera p {
   position: absolute;
   width: 10px;
   height: 10px;
-  border: 3px solid red;
+  border: 3px solid var(--primary-color);
   border-radius: 50%;
   transform: translate(-4px,-4px);
 }
@@ -287,7 +275,7 @@ figure .trasera p {
   position: absolute;
   width: 3px;
   height: 10px;
-  background: red;
+  background: var(--primary-color);
   border-radius: 50%;
   transform: translate(6px,6px) rotate(315deg);
 }
@@ -312,12 +300,12 @@ figure .trasera p {
   outline: none;
   font-size: 18px;
   padding: 10px 0;
-	background: black;
-	color: red;
+	background: var(--second-color);
+	color: var(--primary-color);
 }
 ::placeholder
 {
-	color: red;
+	color: var(--primary-color);
 }
 .clear
 {
@@ -327,7 +315,7 @@ figure .trasera p {
   width: 15px;
   height: 15px;
   right: 15px;
-  background: black;
+  background: var(--second-color);
   cursor: pointer;
   display: flex;
   justify-content: center;
@@ -340,7 +328,7 @@ figure .trasera p {
   content: '';
   width: 3px;
   height: 15px;
-  background: red;
+  background: var(--primary-color);
   transform: rotate(45deg);
 }
 .clear::after
@@ -349,7 +337,7 @@ figure .trasera p {
   content: '';
   width: 3px;
   height: 15px;
-  background: red;
+  background: var(--primary-color);
   transform: rotate(315deg);
 }
 
@@ -359,45 +347,45 @@ figure .trasera p {
 footer 
 {
 	 user-select: none;
-     position: relative;
-     width: 100%;
-     min-height: 85vh;
-     padding: 100px;
-     display: flex;
-     justify-content: flex-start;
-     align-items: center;
-     background: url('img1/fon1.jpg');
-     background-size: cover;
-     background-position: center;
-     background-attachment: fixed;
-     overflow: hidden;
+   position: relative;
+   width: 100%;
+   min-height: 85vh;
+   padding: 100px;
+   display: flex;
+   justify-content: flex-start;
+   align-items: center;
+   background: url('img1/fon1.jpg');
+   background-size: cover;
+   background-position: center;
+   background-attachment: fixed;
+   overflow: hidden;
 }
 footer p
 {
-	font-size: 35px;
+	font-size: 3.9rem;
 	margin: 20px 20px;
 	text-align: center;
 }
 footer p a
 {
   user-select: none;
-  color: red;
+  color: var(--primary-color);
   text-decoration: none;
 }
 footer p a:hover
 {
   user-select: none;
   text-decoration: underline;
-  color:white;
+  color:var(--three-color);
 }
 .derechos
 {
-	background: black;
-	color: gray;
+	background: var(--second-color);
+	color: var(--four-color);
 }
 .derechos p
 {
-	font-size: 25px;
+	font-size: 2.9rem;
 	font-weight: bold;
 }
 
