--- a/estilo4.css
+++ b/estilo4.css
@@ -1,49 +1,58 @@
+:root
+{
+	--primary-color: red;
+	--second-color: black;
+	--three-color: white;
+	--four-color: gray;
+}
 *
 {
 	margin:0;
 	padding: 0;
 	box-sizing: border-box;
 }
+html
+{
+	font-size: 62.5%;
+}
 /* body
 {
-	background: red;
+	background: var(--primary-color);
 } */
 body::-webkit-scrollbar 
 {
-    width: 7px;
+    width: 1rem;
     background: transparent;
-	display: none;
 }
 body::-webkit-scrollbar-thumb
 {
-	background: red;
+	background: var(--primary-color);
 	border-radius: 50px;
 }
 h1
 {
-	color: red;
+	color: var(--primary-color);
 }
 header
 {
 	position: fixed;
 	top: 0;
 	left: 0;
-	width: 107%;
+	width: 101%;
 	padding: 20px 100px;
 	display: flex;
 	justify-content: space-between;
 	align-items: center;
 	z-index: 1000;
-	background: black;
+	background: var(--second-color);
 }
 header .logo
 {
 	position: relative;
-	color: red;
+	color: var(--primary-color);
 	display: inline-block;
-	font-size: 1.5em;
+	font-size: 2.4rem;
 	text-decoration: none;
-	font-weight: 800;
 }
 header a
 {
@@ -61,9 +70,9 @@ header ul li
 header ul li a
 {
 	display: inline-block;
-	color: red;
+	color: var(--primary-color);
 	font-weight: 600;
-	font-size: 1.1em;
+	font-size: 1.7rem;
 	margin-left: 10px;
 	display: inline-block;
 	padding: 8px 10px;
@@ -73,15 +82,15 @@ header ul li a
 header ul li a.active,
 header ul li a:hover
 {
-	background: red;
-	color:#ffff;
+	background: var(--primary-color);
+	color: var(--three-color);
 	border-radius: 30px;
 }
 body 
 {
-	background: black;
+	background: var(--second-color);
 	background-position: center;
-	color: white;
+	color: var(--three-color);
 	font-weight: bold;
 }
 
@@ -99,21 +108,21 @@ body p
 	height: auto;
 	width: auto;
 	text-align: center;
-	font-size: 70px;
+	font-size: 9.9rem;
 	background: url('img/detodo/sod1.jpg');
 	background-size: cover;
 	background-position: center;
 	background-attachment: fixed;
 	overflow: hidden;
 	user-select: none;
-	color: white;
+	color: var(--three-color);
 }
 
 /* cuerpo de la página */
 .imagenes
 {
 	padding: 0;
-	margin: 95px;
+	margin: 80px;
 	text-align: center;
 	flex-wrap: wrap;
 }
@@ -146,7 +155,7 @@ img
      margin-right: 15px;
      width: 50px;
      height: 50px;
-     background: red;
+     background: var(--primary-color);
      border-radius: 50%;
      display: flex;
      justify-content: center;
@@ -163,19 +172,19 @@ img
 }
 .sci li a:hover
 {
-     background: black;
+     background: var(--second-color);
      transform: translateY(-10px);
 }
 
  /* pie de la página */
  .derechos
  {
-	 background: black;
-	 color: gray;
+	 background: var(--second-color);
+	 color: var(--four-color);
  }
  .derechos p
  {
-	 font-size: 25px;
+	 font-size: 2.9rem;
 	 font-weight: bold;
  }
 /* .pie .pagina img:hover {
