--- a/redesociales.css
+++ b/redesociales.css
@@ -3,9 +3,17 @@
   margin: 0;
   padding: 0;
 }
+html
+{
+  font-size: 62.5%;
+}
 body
 {
   background: black;
+}
+body::-webkit-scrollbar 
+{
+    display: none;
 }
 /*Comienzo de menu*/
 header
@@ -13,7 +21,7 @@ header
   position:fixed;
   top: 0;
   left: 0;
-  width: 92%;
+  width: 85%;
   padding: 20px 100px;
   display: flex;
   justify-content: space-between;
@@ -25,9 +33,8 @@ header .logo
   position :relative;
   color: red;
   display: inline-block;
-  font-size: 1.5em;
+  font-size: 2.4rem;
   text-decoration: none;
-  font-weight: 800;
 }
 header a
 {
@@ -47,7 +54,7 @@ header ul li a
   display: inline-block;
   color: red;
   font-weight: 600;
-  font-size: 1.1em;
+  font-size: 1.7em;
   margin-left: 10px;
   padding:8px 10px;
   text-decoration: none;
@@ -157,7 +164,7 @@ header ul li a:hover
 .sci li a:hover .fa
 {
   color: #fff;
-  transform: scale(1.75) translateZ(50px);
+  transform: scale(2.75) translateZ(50px);
 }
 /*Termina Efecto 3d*/
 
@@ -171,5 +178,5 @@ header ul li a:hover
 }
 .derechos p
 {
-  font-size: 20px;
+  font-size: 2.1rem;
 }
