--- a/archenemy/anthemsofrebellion.css
+++ b/archenemy/anthemsofrebellion.css
@@ -123,7 +123,7 @@ header ul li a:hover
 .content .textBox a:hover
 {
 	background: var(--second-color);
-	color: white;
+	color: var(--primary-color);
 }
 .content .textBox a
 {
