--- a/estilo.css
+++ b/estilo.css
@@ -47,17 +47,16 @@ h2
 	font-weight: bold;
 	color: var(--three-color);
 	background-color: var(--second-color);
-	border-radius: 15px;
+	border-radius: 5px;
 	padding: 15px;
-	border: solid 1px var(--three-color);
 	user-select: none;
-	margin: 90px;
+	margin: 100px;
 }
 h2:hover
 {
 	transition: 2s;
 	color: var(--primary-color);
-	border: solid 0.1px var(--primary-color);
+	box-shadow: 0px 5px 50px var(--primary-color);
 }
 h2
 {
