--- a/estilo2.css
+++ b/estilo2.css
@@ -1,3 +1,4 @@
+	/* seccion de privilegios de la página */
 :root
 {
 	--primary-color: red;
@@ -5,6 +6,8 @@
 	--three-color: white;
 	--four-color: gray;
 	--five--color: rgba(0,0,0,0.8);
+	--six-color: rgb(102, 2, 1);
+	--seven-color: rgba(0,0,0,0.9);
 }
 *
 {
@@ -16,6 +19,7 @@ html
 {
 	font-size: 62.5%;
 }
+	/* cuerpo de la página */
 body::-webkit-scrollbar 
 {
     width: 1rem;
@@ -23,8 +27,12 @@ body::-webkit-scrollbar
 }
 body::-webkit-scrollbar-thumb
 {
-	background: var(--primary-color);
+	background: var(--six-color);
 	border-radius: 50px;
+}
+body::-webkit-scrollbar-thumb:hover
+{
+	background: var(--primary-color);
 }
 body 
 {
@@ -40,6 +48,7 @@ body p
 	text-align: center;
 	word-spacing: 10px;
 }
+	/* seccion cabeza de la página */
 h2
 {
 	text-align: center;
@@ -49,34 +58,33 @@ h2
 	user-select: none;
 	margin: 90px;
 }
-.contexto h1
+.contexto
 {
 	top: 0;
-	padding: 170px;
-	height: auto;
+	height: 500px;
 	width: auto;
-	text-align: center;
-	font-size: 11rem;
+	background-size: cover; 
+	background-position: 50% 90%;
 	background-image: linear-gradient(rgba(0,0,0,0.5), rgba(0,0,0,0.5)), url(img1/backsod.jpg);
-	background-size: cover;
-	background-position: center;
 	background-attachment: fixed;
 	overflow: hidden;
-	user-select: none;
-	color: var(--three-color);
 }
-
-
-	/* seccion para el cuadro de busqueada */
-
-/*.caja
+.contexto h1
 {
-	border-radius: 30px;
+	margin-top: 50px;
+	padding: 170px;
+	text-align: center;
+	font-size: 9.9rem;
+	user-select: none;
+	color: var(--four-color);
+	transition: all ease 2s;
 }
-*/
-
-
-	/* 		seccion para el menu*/
+.contexto h1:hover
+{
+	color: var(--three-color);
+	text-shadow: 0 0 5px var(--three-color), 0 0 10px var(--three-color), 0 0 15px var(--three-color), 0 0 50px var(--three-color);
+}
+	/*seccion para el menu*/
 
 header
 {
@@ -130,8 +138,7 @@ header ul li a:hover
 	color:var(--three-color);
 	border-radius: 30px;
 }
-
-
+	/* seccion parte trasera */
 .contenedor {
 	max-width: 100%;
 	margin: 5px 5px;
@@ -155,33 +162,33 @@ header ul li a:hover
 	-o-transform: perspective(300px) rotateY(180deg);
 	transform: perspective(300px) rotateY(180deg);
 
-	-webkit-box-shadow:0px 2px 10px 2px var(--three-color);
-	-moz-box-shadow:0px 2px 10px 2px var(--three-color);
-	box-shadow:0px 2px 10px 2px var(--three-color);
-	border-radius: 13px;
+	-webkit-box-shadow: 0px 0px 20px var(--three-color);
+	-moz-box-shadow: 0px 0px 20px  var(--three-color);
+	box-shadow: 0px 0px 20px var(--three-color);
+	border-radius: 20px;
 }
 
 /*.contenedor_tarjeta:hover figure img {
 	filter: blur(2px);
 }*/
-
+		/* seccion de edicion de imagen trasera y frontal  (GENERAL)*/
 figure {
 	padding: 0;
-	width: 320px;
-	height: 320px;
+	width: 340px;
+	height: 340px;
 	margin: 0;
 	position: relative;
-	transition: all ease .5s;
+	transition: all ease 2s;
 	transform-style: preserve-3d;
-	transform: perspective(300px) rotate(0deg);
+	transform: perspective(500px) rotate(0deg);
 }
 figure .frontal,
 figure .trasera {
 	user-select: none;
-	width: 320px;
-	height: 320px;
+	width: 340px;
+	height: 340px;
 	border-radius: 11px;
-	transition: all ease .5s;
+	transition: all ease .9s;
 }
 
 figure .frontal {
@@ -197,7 +204,7 @@ figure .trasera {
 	transform: perspective(300px) rotateY(180deg) ;
 	backface-visibility: hidden;
 	overflow: auto;
-	background: var(--second-color);
+	background: var(--seven-color);
 }
 
 
@@ -238,6 +245,7 @@ figure .trasera p {
  display: none;
 }
 
+	/* seccion de barra de busqueda */
 .search.active
 {
   width: 360px;
