--- a/vision.css
+++ b/vision.css
@@ -7,6 +7,7 @@
      --three-color: gray;
      --four-color: black;
      --five-color: rgba(0,0,0,0.8);
+     --six-color: rgb(102, 2, 1);
 }
 *
 {
@@ -39,7 +40,7 @@ header .logo
 	position: relative;
 	color: var(--second-color);
 	display: inline-block;
-	font-size: 2.9rem;
+	font-size: 2.6rem;
 	text-decoration: none;
 }
 header a
@@ -59,7 +60,7 @@ header ul li a
 {
 	display: inline-block;
 	color: var(--second-color);
-	font-size: 1.9rem;
+	font-size: 1.6rem;
 	margin-left: 10px;
 	padding: 8px 10px;
 	text-decoration: none;
@@ -96,8 +97,12 @@ body::-webkit-scrollbar
 }
 body::-webkit-scrollbar-thumb
 {
-	background: var(--second-color);
+	background: var(--six-color);
 	border-radius: 50px;
+}
+body::-webkit-scrollbar-thumb:hover
+{
+	background: var(--second-color);
 }
 
      /* seccion imagen */
@@ -112,27 +117,38 @@ body::-webkit-scrollbar-thumb
      /* seccion texto titulo */
 .texto
 {
-     top: 50px;
-     right: 110px;
+     top: 30px;
+     left: 750px;
+     width: 470px;
      text-align: right;
      position: relative;
      font-size: 5rem;
      font-weight: bold;
-     color: var(--second-color);
+     color: var(--six-color);
+}
+.texto:hover
+{
+	color: var(--second-color);
+	text-shadow: 0 0 5px var(--second-color), 0 0 10px var(--second-color), 0 0 15px var(--second-color), 0 0 50px var(--second-color);
 }
 
      /* seccion texto parrafo */
 .textouno
 {
-     padding: 30px;
+     
      float: right;
      position: relative;
-     color: var(--primary-color);
+     color: var(--three-color);
      top: 100px;
      text-align: justify;
      font-size: 3rem;
      font-weight: bold;
      width: 750px;
+}
+.textouno:hover
+{
+	color: var(--primary-color);
+	text-shadow: 0 0 5px var(--primary-color), 0 0 10px var(--primary-color), 0 0 15px var(--primary-color), 0 0 50px var(--primary-color);
 }
 
      /* seccion meta */
@@ -150,23 +166,31 @@ body::-webkit-scrollbar-thumb
      position: relative;
      font-size: 5rem;
      font-weight: bold;
-     color: var(--second-color);
-     width: 500px;
+     color: var(--six-color);
+     width: 440px;
+}
+.titulo:hover
+{
+	color: var(--second-color);
+	text-shadow: 0 0 5px var(--second-color), 0 0 10px var(--second-color), 0 0 15px var(--second-color), 0 0 50px var(--second-color);
 }
 
 .parrafo
 {
-     padding: 30px;
      float: left;
      position: relative;
-     color: var(--primary-color);
+     color: var(--three-color);
      top: 100px;
      text-align: justify;
      font-size: 3rem;
      font-weight: bold;
      width: 750px;
 }
-
+.parrafo:hover
+{
+	color: var(--primary-color);
+	text-shadow: 0 0 5px var(--primary-color), 0 0 10px var(--primary-color), 0 0 15px var(--primary-color), 0 0 50px var(--primary-color);
+}
      /* seccion gracias */
 .gracias
 {
@@ -187,11 +211,13 @@ body::-webkit-scrollbar-thumb
      /* seccion apoyo */
 .apoyo
 {
+     
      position: relative;
      display: inline-blocks;
 }
 .apoyouno
 {
+     display: flex;
      padding: 30px;
      top: 850px;
      left: 100px;
