--- a/coldplay/arushofbloodtothehead.css
+++ b/coldplay/arushofbloodtothehead.css
@@ -1,3 +1,13 @@
+:root
+{
+	--primary-color: black;
+	--second-color: white;
+	--three-color: gray;
+}
+html
+{
+	font-size: 62.5%;
+}
 *
 {
 	margin: 0;
@@ -36,20 +46,20 @@ header
 	position: fixed;
 	top: 0;
 	left: 0;
-	width: 107%;
+	width: 101%;
 	padding: 20px 100px;
 	display: flex;
 	justify-content: space-between;
 	align-items: center;
 	z-index: 1000;
-	background: black;
+	background: var(--primary-color);
 }
 header .logo
 {
 	position: relative;
-	color: white;
+	color: var(--second-color);
 	display: inline-block;
-	font-size: 1.5em;
+	font-size: 2.7rem;
 	text-decoration: none;
 	font-weight: 800;
 }
@@ -69,9 +79,9 @@ header ul li
 header ul li a
 {
 	display: inline-block;
-	color: white;
+	color: var(--second-color);
 	font-weight: 600;
-	font-size: 1.1em;
+	font-size: 1.6rem;
 	margin-left: 10px;
 	display: inline-block;
 	padding: 8px 10px;
@@ -81,8 +91,8 @@ header ul li a
 header ul li a.active,
 header ul li a:hover
 {
-	background: white;
-	color:black;
+	background: var(--second-color);
+	color:var(--primary-color);
 	border-radius: 30px;
 }
 .content
@@ -97,7 +107,7 @@ header ul li a:hover
 .content .textBox h2
 {
 	user-select: none;
-	color: black;
+	color: var(--primary-color);
 	font-size: 3.5em;
 	margin-bottom: 10px;
 	line-height: 1.2em;
@@ -106,13 +116,13 @@ header ul li a:hover
 .content .textBox p
 {
 	font-size: 35px;
-	color: black;
+	color: var(--primary-color);
 	font-weight: bold;
 }
 .content .textBox a:hover
 {
-	background-color: white;
-	color: black;
+	background-color: var(--second-color);
+	color: var(--primary-color);
 }
 .content .textBox a
 {
@@ -120,14 +130,14 @@ header ul li a:hover
 	display: inline-block;
 	margin-top: 20px;
 	padding: 15px 30px;
-	background: black;
-	color: white;
-	font-size: 1.2em;
+	background: var(--primary-color);
+	color: var(--second-color);
+	font-size: 2.0em;
 	border-radius: 40px;
 	font-weight: 700;
 	letter-spacing: 1px;
 	text-decoration: none;
-	border: 3px solid black;
+	border: 3px solid var(--primary-color);
 }
 .sci
 {
@@ -148,15 +158,15 @@ header ul li a:hover
      margin-right: 15px;
      width: 50px;
      height: 50px;
-     color: black;
-     background: white;
+     color: var(--primary-color);
+     background: var(--second-color);
      border-radius: 50%;
      display: flex;
      justify-content: center;
      align-items: center;
      transition: 0.2s ease-in-out;
      text-decoration: none;
-     box-shadow: 0px 10px 7px 0px black;
+     box-shadow: 0px 10px 7px 0px var(--primary-color);
      font-size: 30px;
 }
 /*.sci li a img
@@ -169,13 +179,13 @@ header ul li a:hover
 }*/
 .sci li a:hover
 {
-     background: black;
+     background: var(--primary-color);
      box-shadow: 0px 0px 0px 0px;
      transform: translateY(-10px);
 }
 .sci li a:hover .fa
 {
-	color: white;
+	color: var(--second-color);
 }
 section 
 {
@@ -198,7 +208,7 @@ section
 	margin: -10px;
 	padding: 0px;
 	border-radius: 50px;
-	box-shadow: 5px 0px 40px 5px black;
+	box-shadow: 5px 0px 40px 5px var(--primary-color);
 }
 
 footer 
@@ -206,13 +216,13 @@ footer
 	width: auto;
 	height: auto;
 	font-weight: bold;
-	background: black;
-	color: gray;
+	background: var(--primary-color);
+	color: var(--three-color);
 }
 footer p
 {
 	text-align: center;
-	font-size: 20px;
+	font-size: 2.1rem;
 }
 /* colores estilo sombreado y color de fondo de la imagenes */
 
