--- a/apocalyptica/apocalytica.css
+++ b/apocalyptica/apocalytica.css
@@ -23,6 +23,7 @@ body
 {
 	background: url('../img/apocalyptica/apocalyptica1.jpg');
 	width: auto;
+	background-attachment: fixed;
 	background-position: 50% -20%;
 	background-size: cover;
 }
@@ -92,7 +93,7 @@ header ul li a:hover
 }
 .content
 {
-	position: relative;
+	position: fixed;
 }
 .content .textBox
 {
