--- a/archenemy/arch.css
+++ b/archenemy/arch.css
@@ -23,6 +23,8 @@ body
 {
 	background: url('../img/arch/Archenemy.jpg');
 	width: auto;
+	background-size: cover;
+	background-attachment: fixed;
 	background-position: 50% 20%;
 }
 body p
