--- a/archenemy/concierto.css
+++ b/archenemy/concierto.css
@@ -98,7 +98,7 @@ header ul li a:hover
 }
 .content
 {
-	position: relative;
+	position: fixed;
 }
 .content .textBox
 {
@@ -112,7 +112,7 @@ header ul li a:hover
 	font-size: 3.5em;
 	margin-bottom: 10px;
 	line-height: 1.2rem;
-	font-weight: 700;
+	padding: 25px;
 }
 .content .textBox p
 {
