--- a/avengedsevenfold/ax7.css
+++ b/avengedsevenfold/ax7.css
@@ -23,6 +23,9 @@ body
 {
 	background: url('../img/avengedsevenfold/AX7.jpg');
 	width: auto;
+	font-weight: bold;
+	background-size: cover;
+	background-attachment: fixed;
 	background-position: 50% -50%;
 }
 body p
