--- a/bulletformyvalentine/bulletformyvalentine.css
+++ b/bulletformyvalentine/bulletformyvalentine.css
@@ -92,7 +92,7 @@ header ul li a:hover
 }
 .content
 {
-	position: relative;
+	position: fixed;
 }
 .content .textBox
 {
@@ -105,7 +105,7 @@ header ul li a:hover
 	color: var(--primary-color);
 	font-size: 5.9rem;
 	margin-bottom: 10px;
-	line-height: 4.4rem;
+	line-height: 4.3rem;
 	padding: 25px;
 }
 .content .textBox p
