--- a/childrenofbodom/childrenofbodom.css
+++ b/childrenofbodom/childrenofbodom.css
@@ -23,6 +23,8 @@ body
 {
 	background: url('../img/childrenofbodom/Childrenofbodom.jpg');
 	width: auto;
+	background-size: cover;
+	background-attachment: fixed;
 	background-position: 50% 50%;
 }
 body p
@@ -91,7 +93,7 @@ header ul li a:hover
 }
 .content
 {
-	position: relative;
+	position: fixed;
 }
 .content .textBox
 {
@@ -109,7 +111,7 @@ header ul li a:hover
 }
 .content .textBox p
 {
-	font-size: 20px;
+	font-size: 2.5rem;
 	color: var(--primary-color);
 	font-weight: bold;
 }
