--- a/dimmuborgir/abrahadabra.css
+++ b/dimmuborgir/abrahadabra.css
@@ -1,3 +1,14 @@
+:root
+{
+	--primary-color: rgb(46, 74, 86);
+	--second-color: black;
+	--three-color: white;
+	--four-color: gray;
+}
+html
+{
+	font-size: 62.5%;
+}
 *
 {
 	margin: 0;
@@ -37,20 +48,20 @@ header
 	position: fixed;
 	top: 0;
 	left: 0;
-	width: 107%;
+	width: 101%;
 	padding: 20px 100px;
 	display: flex;
 	justify-content: space-between;
 	align-items: center;
 	z-index: 1000;
-	background: black;
+	background: var(--second-color);
 }
 header .logo
 {
 	position: relative;
-	color: rgb(46, 74, 86);
+	color: var(--primary-color);
 	display: inline-block;
-	font-size: 1.5em;
+	font-size: 2.7rem;
 	text-decoration: none;
 	font-weight: 800;
 }
@@ -70,9 +81,9 @@ header ul li
 header ul li a
 {
 	display: inline-block;
-	color: rgb(46, 74, 86);
+	color: var(--primary-color);
 	font-weight: 600;
-	font-size: 1.1em;
+	font-size: 1.6em;
 	margin-left: 10px;
 	display: inline-block;
 	padding: 8px 10px;
@@ -82,8 +93,8 @@ header ul li a
 header ul li a.active,
 header ul li a:hover
 {
-	background: rgb(46, 74, 86);
-	color:black;
+	background: var(--primary-color);
+	color:var(--second-color);
 	border-radius: 30px;
 }
 .content
@@ -98,7 +109,7 @@ header ul li a:hover
 .content .textBox h2
 {
 	user-select: none;
-	color: white;
+	color: var(--three-color);
 	font-size: 3.5em;
 	margin-bottom: 10px;
 	line-height: 1.2em;
@@ -107,13 +118,13 @@ header ul li a:hover
 .content .textBox p
 {
 	font-size: 35px;
-	color: white;
+	color: var(--three-color);
 	font-weight: bold;
 }
 .content .textBox a:hover
 {
-	background: black;
-	color: rgb(46, 74, 86);
+	background: var(--second-color);
+	color: var(--primary-color);
 }
 .content .textBox a
 {
@@ -121,9 +132,9 @@ header ul li a:hover
 	display: inline-block;
 	margin-top: 20px;
 	padding: 15px 30px;
-	background: rgb(46, 74, 86);
-	color: black;
-	font-size: 1.2em;
+	background: var(--primary-color);
+	color: var(--second-color);
+	font-size: 2.0em;
 	border-radius: 40px;
 	font-weight: 700;
 	letter-spacing: 1px;
@@ -148,15 +159,15 @@ header ul li a:hover
      margin-right: 15px;
      width: 50px;
      height: 50px;
-	 color: black;
-     background: rgb(46, 74, 86);
+	 color: var(--second-color);
+     background: var(--primary-color);
      border-radius: 50%;
      display: flex;
      justify-content: center;
      align-items: center;
      transition: 0.2s ease-in-out;
 	text-decoration: none;
-	box-shadow: 0px 10px 7px 0px black;
+	box-shadow: 0px 10px 7px 0px var(--second-color);
 	font-size: 30px;
 }
 /* .sci li a img
@@ -169,13 +180,13 @@ header ul li a:hover
 } */
 .sci li a:hover
 {
-     background: black;
+     background: var(--second-color);
 	box-shadow: 0px 0px 0px 0px;
      transform: translateY(-10px);
 }
 .sci li a:hover .fa
 {
-	color: rgb(46, 74, 86);
+	color: var(--primary-color);
 }
 section 
 {
@@ -198,7 +209,7 @@ section
 	margin: -10px;
 	padding: 0px;
 	border-radius: 50px;
-	box-shadow: 5px 0px 40px 5px rgb(46, 74, 86);
+	box-shadow: 5px 0px 40px 5px var(--primary-color);
 }
 
 footer 
@@ -206,13 +217,13 @@ footer
 	width: auto;
 	height: auto;
 	font-weight: bold;
-	background: black;
-	color: gray;
+	background: var(--second-color);
+	color: var(--four-color);
 }
 footer p
 {
 	text-align: center;
-	font-size: 20px;
+	font-size: 2.1rem;
 }
 /* colores estilo sombreado y color de fondo de la imagenes */
 
